syntax = "proto3";

package auth;


service Auth {
	rpc GenerateToken(Request) returns (Response) {};
	rpc VertifyToken(Request) returns (Response) {};
}

message Request {
	string username = 1;
        string password = 2;
}

message Response {
	string msg = 1;
}